fix(members): Fix member cards rightmost position on mobile.

--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -1,30 +1,30 @@
 .members {
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
-  display: flex;
-  align-items: stretch;
   overflow-x: auto;
   max-width: 100%;
   margin: 0;
-  padding: 2rem 2rem 6rem;
+  padding: 2rem 0 6rem;
   list-style: none;
+  white-space: nowrap;
 
   @include media($screen-sm) {
-    align-items: center;
+    display: flex;
     justify-content: center;
+    align-items: center;
     padding: 6rem 0 10rem 0;
   }
 }
 
 .member {
+  display: inline-block;
   scroll-snap-align: center;
   opacity: 0;
   position: relative;
   overflow: hidden;
-  flex-grow: 0;
-  flex-shrink: 0;
   width: 33.6rem;
-  margin: 0 1rem;
+  min-height: 45em;
+  margin: 0 2rem 0 0;
   padding: 7em 3em 9em;
   font-size: 1rem;
   list-style: none;
@@ -50,7 +50,7 @@
   .members & {
 
     &:nth-child(1) {
-      margin-left: 0;
+      margin-left: 2rem;
     }
 
     &:nth-child(1),
@@ -98,6 +98,10 @@
           }
         }
       }
+    }
+
+    &:nth-child(5) {
+      margin-right: 2rem;
     }
   }
 
@@ -227,6 +231,7 @@
     weight: 300;
   };
   line-height: 1.43;
+  white-space: normal;
 }
 
 .member__anchor {
